# pyrox

./: .env.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md  labeler.yml
.github/instructions/: docs-examples.instructions.md
.github/workflows/: ci.yml  pages.yml  typecheck.yml
CHANGELOG/: index.html
api/api/: index.html
api/core/: index.html
api/gp/: index.html
api/inference/: index.html
api/nn/: index.html
api/preprocessing/: index.html
api/reference/: index.html
contributing/: index.html
design_docs/pyrox/: README.md  architecture.md  boundaries.md  decisions.md  vision.md
docs/: index.md
docs/api/: api.md  core.md  gp.md  inference.md  nn.md  preprocessing.md  reference.md
docs/notebooks/: advanced_gp_ep.ipynb  advanced_gp_gauss_newton.ipynb  advanced_gp_laplace.ipynb  advanced_gp_pl.ipynb  advanced_gp_qn.ipynb  conditioning.ipynb  deep_random_fourier_features.ipynb  exact_gp_regression.ipynb  gp_pathwise.ipynb  gp_pathwise.py  gp_pathwise_numpyro.ipynb  kernel_approximation.ipynb  latent_gp_classification.ipynb  markov_gp_kalman.ipynb  markov_gp_nongauss.ipynb  markov_gp_sde_kernels.ipynb  markov_gp_training.ipynb  multioutput_gp.ipynb  random_fourier_features.ipynb  random_fourier_features.py  rff_as_neural_networks.ipynb  rff_as_neural_networks.py  siren_inr.ipynb  sparse_markov_gp.ipynb  spatiotemporal_preprocessing.ipynb  spectral_kernel_models.ipynb
notebooks/advanced_gp_ep/: index.html
notebooks/advanced_gp_gauss_newton/: index.html
notebooks/advanced_gp_laplace/: index.html
notebooks/advanced_gp_pl/: index.html
notebooks/advanced_gp_qn/: index.html
notebooks/conditioning/: index.html
notebooks/deep_random_fourier_features/: index.html
notebooks/ensemble_primitives_tutorial/: index.html
notebooks/ensemble_runner_tutorial/: index.html
notebooks/exact_gp_regression/: index.html
notebooks/gp_pathwise/: index.html
notebooks/gp_pathwise_numpyro/: index.html
notebooks/kernel_approximation/: index.html
notebooks/latent_gp_classification/: index.html
notebooks/markov_gp_kalman/: index.html
notebooks/markov_gp_nongauss/: index.html
notebooks/markov_gp_sde_kernels/: index.html
notebooks/markov_gp_training/: index.html
notebooks/multioutput_gp/: index.html
notebooks/random_fourier_features/: index.html
notebooks/regression_masterclass_parameterized/: index.html
notebooks/regression_masterclass_pyrox_sample/: index.html
notebooks/regression_masterclass_treeat/: index.html
notebooks/rff_as_neural_networks/: index.html
notebooks/siren_inr/: index.html
notebooks/sparse_markov_gp/: index.html
notebooks/spatiotemporal_preprocessing/: index.html
notebooks/spectral_kernel_models/: index.html
search/: search_index.json
src/pyrox/: __init__.py
tests/: test_core_numpyro_integration.py  test_core_parameterized.py  test_core_pyrox_module.py  test_pyrox.py
tests/api/: test_bnf.py  test_estimator.py
tests/basis/: test_fourier.py  test_laplacian.py  test_rff.py  test_spectral_density.py  (+1 more)
(+127 files in other folders)
