[project]
name = "pyrox"
version = "0.0.3"
description = "Probabilistic modeling with Equinox and NumPyro: Bayesian neural networks, Gaussian processes, and composable GP building blocks."
authors = [
    {name="J. Emmanuel Johnson", email="jemanjohnson34@gmail.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["jax", "equinox", "numpyro", "gaussian-processes", "bayesian-neural-networks", "probabilistic"]
requires-python = ">=3.12"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "jax>=0.4",
    "equinox>=0.11",
    "numpyro>=0.15",
    "gaussx @ git+https://github.com/jejjohnson/gaussx.git@main",
    "lineax>=0.0.5",
    "einops>=0.7",
]

[project.optional-dependencies]
optax = [
    "optax>=0.2",
]

[project.urls]
Repository = "https://github.com/jejjohnson/pyrox"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.5.1",
]
lint = [
    "ruff>=0.15.10",
]
typecheck = [
    "ty>=0.0.30",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-jupyter>=0.26.2",
    "jupytext>=1.16",
    "ipykernel>=7.2.0",
    # pygments 2.20.0 dropped the None -> '' coercion for HtmlFormatter(filename=...),
    # but pymdownx.highlight 10.21.x still passes the untitled-code-block title
    # through as None. Pin until a fixed pymdown-extensions release ships.
    "pygments>=2.19,<2.20",
]
examples = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scikit-learn>=1.4",
]

[tool.uv.sources]
# gaussx is not yet on PyPI; resolve from GitHub until the first release.
gaussx = { git = "https://github.com/jejjohnson/gaussx.git", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# gaussx is declared via a PEP 508 direct URL until it ships to PyPI.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyrox"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["design_docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E402", "E721", "E731", "E741"]

[tool.ruff.lint.per-file-ignores]
# F722 clashes with jaxtyping's string-based shape annotations (Array, "N D").
# Scope the suppression to the jaxtyping-using GP layer + its tests only.
"src/pyrox/gp/**" = ["F722"]
"tests/gp/**" = ["F722"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/pyrox --cov-report=term-missing --cov-report=xml:coverage.xml"

[tool.coverage.run]
source = ["src/pyrox"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
